# qxAdm

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README  README.md  azure-pipelines.yml  didisoft.lic  generate-vcproj.bat  index.html  kware.pri  params.json  qxAdm.pro  todo.txt
doc/: author.txt
docs/: about.md  cpp-utils.md  split.md  todos.md  views.md
qa-build-desktop/: Makefile  Makefile.Debug  Makefile.Release  object_script.qa.Release  object_script.qad.Debug  ui_EditInvoices.h  ui_MainWindow.h  ui_SetupAutoSplitColumn.h  ui_SetupColumn.h
qa-build-desktop/debug/: moc_EditInvoices.cpp  moc_MainWindow.cpp  moc_SetupAutoSplitColumn.cpp  moc_SetupColumn.cpp
src/: AsocData.cpp  AsocData.h  Column.cpp  Column.h  EditInvoices.cpp  EditInvoices.h  EditInvoices.ui  InputCntColumn.cpp  InputCntColumn.h  InputDivColumn.cpp  InputDivColumn.h  Invoice.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OutputAutoSumColumn.cpp  OutputAutoSumColumn.h  SetupAutoSplitColumn.cpp  SetupAutoSplitColumn.h  SetupColumn.cpp  SetupColumn.h  SetupColumn.ui  Sheet.cpp  Sheet.h  TablePrintDialog.cpp  TablePrintDialog.h  core.pri  kware.pri  main.cpp  qa.pro  qa.pro.user.2.2pre5  src.pri
src/core/: BasicColumns.cpp  BasicColumns.h  Cell.cpp  Cell.h  Column.cpp  Column.h  InputCntColumn.cpp  InputCntColumn.h  InputDivColumn.cpp  InputDivColumn.h  OutputAutoSplitColumn.cpp  OutputAutoSplitColumn.h  OutputAutoSumColumn.cpp  OutputAutoSumColumn.h  Sheet.cpp  Sheet.h  SplitComponent.h  commons.h  core.pri
src/domain/: AsocData.cpp  AsocData.h  BasicColumns.cpp  BasicColumns.h  Cell.cpp  Cell.h  Column.cpp  Column.h  InputCntColumn.cpp  InputCntColumn.h  InputDivColumn.cpp  InputDivColumn.h  Invoice.h  OutputAutoSplitColumn.cpp  OutputAutoSplitColumn.h  OutputAutoSumColumn.cpp  OutputAutoSumColumn.h  Sheet.cpp  Sheet.h  commons.h
src/persistence/: AsocPersistence.h
src/persistence/json/: JsonPersistence.cpp  JsonPersistence.h
src/presentation/qtgui/: EditInvoices.cpp  EditInvoices.h  ExistingInvoice.cpp  ExistingInvoice.h  ExistingInvoice.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  NewInvoice.cpp  NewInvoice.h  NewInvoice.ui  SetupAutoSplitColumn.cpp  SetupAutoSplitColumn.h  SetupAutoSplitColumn.ui  SetupColumn.cpp  SetupColumn.h  SheetModel.cpp  SheetModel.h  TablePrintDialog.cpp  TablePrintDialog.h
src/qa-build-desktop/: Makefile  Makefile.Debug  Makefile.Release  ui_EditInvoices.h  ui_MainWindow.h  ui_SetupAutoSplitColumn.h  ui_SetupColumn.h
var/: qa.json  qxadm.json
